force-app/main/default/objects/ATSExtractedCandidateSkill__c/ATSExtractedCandidateSkill__c.object-meta.xml
<CustomObject>
    <label>Skill</label>
    <nameField>
        <displayFormat>AECS-{0000}</displayFormat>
        <label>ATSExtractedCandidateSkill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>