force-app/main/default/objects/ATSExtractedCandidateSkill__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional_skill</fullName>
                <label>Professional skill</label>
            </value>
            <value>
                <fullName>IT_skill</fullName>
                <label>IT skill</label>
            </value>
            <value>
                <fullName>Soft_skill</fullName>
                <label>Soft skill</label>
            </value>
            <value>
                <fullName>Language_skill</fullName>
                <label>Language skill</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>