force-app/main/default/objects/ATSExtractedCandidateSkill__c/fields/Category_Tk__c.field-meta.xml
<CustomField>
    <fullName>Category_Tk__c</fullName>
    <formula>TEXT(Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Tk</label>
    <type>Text</type>
</CustomField>