force-app/main/default/objects/ATSExtractedCandidateSkill__c/fields/Contact_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Contact_Candidate__c</fullName>
    <label>Contact &amp; Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ATSExtractedCandidateSkills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>