force-app/main/default/objects/ATSExtractedCandidateSkill__c/fields/Extracted_Skill__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Skill__c</fullName>
    <label>Extracted Skill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>