force-app/main/default/objects/ATSExtractedCandidateSkill__c/fields/IsITSkill__c.field-meta.xml
<CustomField>
    <fullName>IsITSkill__c</fullName>
    <formula>AND(ISPICKVAL( Category__c,&apos;IT_skill&apos;),  Contact_Candidate__r.Is_Index_to_Textkernel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is IT Skill</label>
    <type>Checkbox</type>
</CustomField>