force-app/main/default/objects/ATSExtractedCandidateSkill__c/fields/IsLanguageSkill__c.field-meta.xml
<CustomField>
    <fullName>IsLanguageSkill__c</fullName>
    <formula>AND(ISPICKVAL( Category__c,&apos;Language_skill&apos;), Contact_Candidate__r.Is_Index_to_Textkernel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Language Skill</label>
    <type>Checkbox</type>
</CustomField>