force-app/main/default/objects/ATSExtractedCandidateSkill__c/fields/IsProfessionalSkill__c.field-meta.xml
<CustomField>
    <fullName>IsProfessionalSkill__c</fullName>
    <formula>AND(ISPICKVAL( Category__c ,&apos;Professional_skill&apos;), Contact_Candidate__r.Is_Index_to_Textkernel__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Professional Skill</label>
    <type>Checkbox</type>
</CustomField>