force-app/main/default/objects/ATSExtractedCandidateSkill__c/fields/IsSoftSkill__c.field-meta.xml
<CustomField>
    <fullName>IsSoftSkill__c</fullName>
    <formula>AND(ISPICKVAL(Category__c , &apos;Soft_skill&apos;), Contact_Candidate__r.Is_Index_to_Textkernel__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Soft Skill</label>
    <type>Checkbox</type>
</CustomField>